Clean up `ThreadContextMap` implementations
- Make `StringArray` the default thread context map
- Remove `CopyOnWriteSortedArrayThreadContextMap`
- Move `GarbageFreeSortedArrayThreadContextMap` to `log4j-core`

--- a/src/site/antora/modules/ROOT/pages/manual/simple-logger.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/simple-logger.adoc
@@ -24,11 +24,17 @@ This is a convenience for environments where either a fully-fledged logging impl
 [#config]
 == Configuration
 
+[#logger]
+=== Logger
+
 `SimpleLogger` can be configured using the following system properties:
 
-include::partial$manual/systemproperties/properties-simple-logger.adoc[leveloffset=+1]
+include::partial$manual/systemproperties/properties-simple-logger.adoc[leveloffset=+2]
 
+[#thread-context]
 === Thread context
 
-Simple Logger supports the same properties as Log4j Core for the configuration of the thread context.
-See xref:manual/systemproperties.adoc#properties-thread-context[] for details.
+For the configuration of the thread context,
+Simple Logger supports a subset of the properties supported by Log4j Core:
+
+include::partial$manual/systemproperties/properties-thread-context-simple-logger.adoc[leveloffset=+2]
