--- a/src/site/antora/modules/ROOT/nav.adoc
+++ b/src/site/antora/modules/ROOT/nav.adoc
@@ -24,32 +24,31 @@
 .xref:manual/index.adoc[]
 * xref:manual/getting-started.adoc[]
 * xref:manual/installation.adoc[]
-* xref:manual/architecture.adoc[]
 * xref:manual/api.adoc[API]
-* xref:manual/config-intro.adoc[]
-** xref:manual/configuration.adoc[]
-** xref:manual/systemproperties.adoc[]
-** xref:manual/customconfig.adoc[]
-** xref:manual/appenders.adoc[]
-*** xref:manual/appenders/file.adoc[]
-*** xref:manual/appenders/rolling-file.adoc[]
-*** xref:manual/appenders/database.adoc[]
-*** xref:manual/appenders/network.adoc[]
-*** xref:manual/appenders/message-queue.adoc[]
-*** xref:manual/appenders/delegating.adoc[]
-** xref:manual/layouts.adoc[]
-*** xref:manual/json-template-layout.adoc[]
-*** xref:manual/pattern-layout.adoc[]
-** xref:manual/lookups.adoc[]
-** xref:manual/filters.adoc[]
-** xref:manual/scripts.adoc[]
-** xref:manual/jmx.adoc[]
-* xref:manual/extending.adoc[Extending]
-** xref:manual/plugins.adoc[]
-* xref:manual/performance.adoc[]
-** xref:manual/async.adoc[]
-** xref:manual/garbagefree.adoc[]
-* xref:manual/migration.adoc[]
+* xref:manual/implementation.adoc[Implementation]
+** xref:manual/architecture.adoc[]
+** xref:manual/config-intro.adoc[]
+*** xref:manual/configuration.adoc[]
+*** xref:manual/systemproperties.adoc[]
+*** xref:manual/customconfig.adoc[]
+*** xref:manual/appenders.adoc[]
+**** xref:manual/appenders/file.adoc[]
+**** xref:manual/appenders/rolling-file.adoc[]
+**** xref:manual/appenders/database.adoc[]
+**** xref:manual/appenders/network.adoc[]
+**** xref:manual/appenders/message-queue.adoc[]
+**** xref:manual/appenders/delegating.adoc[]
+*** xref:manual/layouts.adoc[]
+**** xref:manual/json-template-layout.adoc[]
+**** xref:manual/pattern-layout.adoc[]
+*** xref:manual/lookups.adoc[]
+*** xref:manual/filters.adoc[]
+*** xref:manual/scripts.adoc[]
+** xref:manual/extending.adoc[Extending]
+*** xref:manual/plugins.adoc[]
+** xref:manual/performance.adoc[]
+*** xref:manual/async.adoc[]
+*** xref:manual/garbagefree.adoc[]
 
 .References
 * xref:plugin-reference.adoc[Plugin reference]
@@ -63,7 +62,7 @@
 * xref:manual/cloud.adoc[]
 * xref:development.adoc[]
 
-.Components
+.xref:components.adoc[Components]
 * xref:log4j-spring-cloud-config-client.adoc[]
 * xref:log4j-jul.adoc[]
 * xref:log4j-to-jul.adoc[]
