--- a/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
@@ -224,28 +224,7 @@ The specification of <<FlumeAppender-element-Agent,agents>> and properties are m
 
 Additional runtime dependencies are required to use the Flume Appender:
 
-[tabs]
-====
-Maven::
-+
-[source,xml]
-----
-<!-- We assume you use `log4j-bom` for dependency management -->
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-flume-ng</artifactId>
-  <scope>runtime</scope>
-</dependency>
-----
-
-Gradle::
-+
-[source,groovy]
-----
-// We assume you use `log4j-bom` for dependency management
-runtimeOnly 'org.apache.logging.log4j:log4j-flume-ng'
-----
-====
+include::partial$components/log4j-flume-ng.adoc[]
 
 To use the Flume Appender <<FlumeAppender-mode-PERSISTENT,PERSISTENT mode>>, you need the following additional dependency:
 
