--- a/src/site/antora/modules/ROOT/pages/manual/implementation.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/implementation.adoc
@@ -15,27 +15,23 @@
     limitations under the License.
 ////
 
-[tabs]
-====
-Maven::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,xml,subs="+attributes"]
-----
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jdbc</artifactId>
-  <scope>runtime</scope>
-</dependency>
-----
+= Reference implementation
 
-Gradle::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,groovy,subs="+attributes"]
-----
-runtimeOnly 'org.apache.logging.log4j:log4j-jdbc'
-----
-====
+The reference implementation of the xref:manual/api.adoc[] is called Log4j Core.
+It is a versatile, reliable, feature-rich and production-ready implementation.
+The remaining chapters of the manual describe the ins and outs of this logging implementation:
+
+Do you want to learn about its architecture?::
+Go to xref:manual/architecture.adoc[].
+
+Do you want to install Log4j Core?::
+Go to xref:manual/installation.adoc#impl-core[Installing Log4j Core].
+
+Do you want to configure Log4j Core?::
+Go to xref:manual/config-intro.adoc[].
+
+Do you want to write custom components for Log4j Core?::
+Go to xref:manual/extending.adoc[].
+
+Do you want to tune your installation for a better performance?::
+Go to xref:manual/performance.adoc[].
