--- a/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
@@ -360,7 +360,8 @@ See <<lookups-patterns>> for more information.
 | `docker:<key>`
 
 where `<key>` is one of the <<DockerLookup-keys>>.
-| Dependency | `log4j-docker`
+| Dependency
+| xref:components.adoc#log4j-docker[`log4j-docker`]
 |===
 
 Docker Lookup queries https://docs.docker.com/engine/api/[the API of the Docker Engine] running your container.
@@ -378,9 +379,11 @@ It supports the retrieval of following container attributes:
 |shortImageId |The first 12 characters of the container image ID
 |===
 
-Additional runtime dependencies are required for using Docker Lookup:
-
-include::partial$manual/dependencies-log4j-docker.adoc[]
+.Additional runtime dependencies are required for using Docker Lookup:
+[%collapsible]
+=====
+include::partial$components/log4j-docker.adoc[]
+=====
 
 [#EnvironmentLookup]
 === Environment Lookup
