--- a/src/site/antora/modules/ROOT/partials/components/log4j-1.2-api.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-1.2-api.adoc
@@ -21,11 +21,11 @@ Maven::
 +
 We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,xml,subs="+attributes"]
+[source,xml]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jdbc</artifactId>
+  <artifactId>log4j-1.2-api</artifactId>
   <scope>runtime</scope>
 </dependency>
 ----
@@ -34,8 +34,8 @@ Gradle::
 +
 We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,groovy,subs="+attributes"]
+[source,groovy]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-jdbc'
+runtimeOnly 'org.apache.logging.log4j:log4j-1.2-api'
 ----
 ====
