--- a/src/site/antora/modules/ROOT/partials/components/log4j-iostreams.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-iostreams.adoc
@@ -19,23 +19,22 @@
 ====
 Maven::
 +
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
 [source,xml,subs="+attributes"]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jdbc</artifactId>
-  <scope>runtime</scope>
+  <artifactId>log4j-iostreams</artifactId>
 </dependency>
 ----
 
 Gradle::
 +
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
 [source,groovy,subs="+attributes"]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-jdbc'
+implementation 'org.apache.logging.log4j:log4j-iostreams'
 ----
 ====
