--- a/src/site/antora/modules/ROOT/partials/manual/dependencies-log4j-jctools.adoc
+++ b/src/site/antora/modules/ROOT/partials/manual/dependencies-log4j-jctools.adoc
@@ -19,9 +19,10 @@
 ====
 Maven::
 +
-[source,xml]
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
++
+[source,xml,subs="+attributes"]
 ----
-<!-- We assume you use `log4j-bom` for dependency management -->
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-jctools</artifactId>
@@ -31,9 +32,10 @@ Maven::
 
 Gradle::
 +
-[source,groovy]
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
++
+[source,groovy,subs="+attributes"]
 ----
-// We assume you use `log4j-bom` for dependency management
 runtimeOnly 'org.apache.logging.log4j:log4j-jctools'
 ----
 ====
