Fix links and remove per-module pages (#2800)
This PR:

- fixes internal links as far as IDEA can find.
- removes most `log4j-<something>.adoc` pages, if their content is available elsewhere. For example `log4j-docker` is completely described in `lookups.adoc`.

--- a/src/site/antora/modules/ROOT/nav.adoc
+++ b/src/site/antora/modules/ROOT/nav.adoc
@@ -64,9 +64,9 @@
 * xref:development.adoc[]
 
 .Components
-* xref:log4j-flume-ng.adoc[]
-* xref:log4j-docker.adoc[]
 * xref:log4j-spring-cloud-config-client.adoc[]
+* xref:log4j-jul.adoc[]
+* xref:log4j-to-jul.adoc[]
 
 .Related projects
 * {log4j2-url}[Log4j 2]
