--- a/src/site/antora/modules/ROOT/pages/faq.adoc
+++ b/src/site/antora/modules/ROOT/pages/faq.adoc
@@ -135,7 +135,7 @@ This disables level-based status logger filtering and effectively allows all sta
 [#separate_log_files]
 == How do I dynamically write to separate log files?
 
-You can use xref:manual/appenders.adoc#RoutingAppender[the routing appender] to evaluate a log message and forward it to a particular appender.
+You can use xref:manual/appenders/delegating.adoc#RoutingAppender[the routing appender] to evaluate a log message and forward it to a particular appender.
 
 [#api-tradeoffs]
 == What are the trade-offs of using Log4j API versus SLF4J?
