--- a/src/site/antora/modules/ROOT/pages/faq.adoc
+++ b/src/site/antora/modules/ROOT/pages/faq.adoc
@@ -313,17 +313,8 @@ https://docs.oracle.com/javase/8/docs/api/java/util/ServiceLoader.html[`ServiceL
 You need to properly merge them by concatenating conflicting files.
 
 `META-INF/org/apache/logging/log4j/core/config/plugins/Log4j2Plugins.dat`::
-These files contain Log4j plugin descriptors and need to be properly merged using the appropriate resource transformer for your shading plugin:
-
-https://maven.apache.org/plugins/maven-assembly-plugin/[Maven Assembly Plugin]:::
-https://github.com/sbt/sbt-assembly[SBT Assembly Plugin]:::
-We are not aware of any resource transformers capable of merging Log4j plugin descriptors.
-
-https://maven.apache.org/plugins/maven-shade-plugin/[Maven Shade Plugin]:::
-You need to use the
-https://logging.staged.apache.org/log4j/transform/log4j-transform-maven-shade-plugin-extensions.html#log4j-plugin-cache-transformer[Log4j Plugin Descriptor Transformer].
-
-https://gradleup.com/shadow/[Gradle Shadow Plugin]:::
-You need to use the
-https://github.com/GradleUp/shadow/blob/main/src/main/groovy/com/github/jengelman/gradle/plugins/shadow/transformers/Log4j2PluginsCacheFileTransformer.groovy[`Log4j2PluginsCacheFileTransformer`].
+These files contain
+xref:manual/plugins.adoc[Log4j Plugin]
+descriptors.
+See xref:manual/plugins.adoc#plugin-merge[Merging plugin descriptors] for more details.
 ====
